--- a/css/ui.css
+++ b/css/ui.css
@@ -83,6 +83,13 @@ button:not(:disabled) {
 	top: 5px;
 }
 
+.ui button[data-command=MyHelp] {
+	position: absolute;
+	left: - 150px;
+	top: 5px;
+
+}
+	
 .ui button[data-command=Notes] {
 	position: absolute;
 	left: -90px;
